--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "requests (>=2.32.4,<3.0.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
-    "playwright (>=1.53.0,<2.0.0)"
+    "playwright (>=1.53.0,<2.0.0)",
+    "fastapi (>=0.116.0,<0.117.0)",
+    "uvicorn[standard] (>=0.35.0,<0.36.0)",
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "pydantic (>=2.11.7,<3.0.0)"
 ]
 
 
