--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "reviews-scraper"
+name = "src"
 version = "0.1.0"
 description = ""
 authors = [
@@ -24,3 +24,8 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry.scripts]
+start = "src.run:start"
+test = "pytest:main"
