--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "fastapi (>=0.116.0,<0.117.0)",
     "uvicorn[standard] (>=0.35.0,<0.36.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
-    "pydantic (>=2.11.7,<3.0.0)"
+    "pydantic (>=2.11.7,<3.0.0)",
+    "black (>=25.1.0,<26.0.0)"
 ]
 
 
