--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "src"}] # Important: Tell Poetry where your package is
 
 [tool.poetry.dependencies]
-python = ">=3.12"
+python = "^3.12"
 google-search-results = ">=2.4.2,<3.0.0"
 python-dotenv = ">=1.1.1,<2.0.0"
 requests = ">=2.32.4,<3.0.0"
