--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pydantic-settings = ">=2.10.1,<3.0.0"
 pydantic = ">=2.11.7,<3.0.0"
 black = ">=25.1.0,<26.0.0"
 google-generativeai = ">=0.8.5,<0.9.0"
+supabase = "^2.18.1"
 
 [tool.poetry.scripts]
 start = "src.run:start"
